Done fixing the translation functionalities

--- a/client/src/translations/financial_words_en.json
+++ b/client/src/translations/financial_words_en.json
@@ -2,25 +2,28 @@
     "accountCategories": "Account Categories",
     "advertisingExpenses": "Advertising Expenses",
     "analysis": "Analysis",
-    "amortization": "Amortization",
-    "assignmentRatio": "Assignment Ratio",
-    "benefitsAllowance": "Benefits Allowance",
+    "amortizationExpenses": "Amortization Expenses",
+    "assignmentRatio": "Assignemnt Ratio",
+    "statutoryWelfareExpenses": "Statutory Welfare Expenses",
     "bonus": "Bonus",
-    "communicationCosts": "Communication Costs",
+    "communicationExpenses": "Communication Expenses",
     "consumableExpenses": "Consumable Expenses",
     "costOfSales": "Cost of Sales",
-    "cumulativeOrdinaryIncome": "Cumulative Ordinary Income",
-    "departmentInCharge": "Department in Charge",
+    "ordinaryIncomeProfitMargin": "Ordinary Income Profit Margin",
+    "ordinaryIncome": "Ordinary Income",
+    "cumulativeOrdinaryIncome": "Cumulative Ordinary Income ",
+    "businessDivision": "Business Division ",
     "depreciationExpenses": "Depreciation Expenses",
     "dispatchLabourExpenses": "Dispatch Labour Expenses",
     "displayByProject": "Display by Project",
     "entertainmentExpenses": "Entertainment Expenses",
-    "expenses": "Expenses",
+    "expenses": "Expenses ",
     "fuelAllowance": "Fuel Allowance",
-    "grossProfit": "Gross Profit",
-    "insurancePremium": "Insurance Premium",
+    "grossProfitMargin": "Gross Profit Margin",
+    "grossProfit": "Gross Profit ",
+    "insurancePremiums": "Insurance Permiums",
     "nonOperatingExpenses": "Non-Operating Expenses",
-    "nonOperatingIncome": "Non-Operating Income",
+    "nonOperatingIncome": "Non-Operating Income ",
     "operatingIncome": "Operating Income",
     "operatingProfitMargin": "Operating Profit Margin",
     "outsourcingExpenses": "Outsourcing Expenses",
@@ -28,25 +31,27 @@
     "personalExpenses": "Personal Expenses",
     "planning": "Planning",
     "productPurchases": "Product Purchases",
-    "profitAndLossPlanning": "Profit and Loss Planning",
+    "profitAndLossPlaninng": "Profit and Loss Planning",
     "purchases": "Purchases",
-    "rent": "Rent",
+    "rentExpenses": "Rent Expenses",
     "executiveRenumeration": "Executive Renumeration",
     "results": "Results",
     "salary": "Salary",
     "sales": "Sales",
     "salesRatio": "Sales Ratio",
-    "sga": "SGA",
-    "taxesAndPublicCharges": "Taxes & Public Charges",
+    "sellingAndGeneralAdminExpenses": "Selling and General Admin Expenses",
+    "taxesAndpublicCharges": "Taxes and Public Charges",
     "toggle0YenExpenses": "Toggle 0 Yen Expenses",
     "total": "Total",
     "totalAmount": "Total Amount",
-    "totalSales": "Total Sales",
+    "totalSalesRevenue": "Total Sales Revenue",
+    "salesRevenue": "Sales Revenue",
     "transactionFees": "Transaction Fees",
-    "travelExpenses": "Travel Expenses",
+    "suppliesExpenses": "Supplies Expenses",
+    "travelExpenses": "Travel Expenses ",
     "utilitiesExpenses": "Utilities Expenses",
-    "welfareExpenses": "Welfare Expenses",
-    "wip": "WIP",
-    "year1stHalfTotal": "Year 1st Half Total",
-    "year2ndHalfTotal": "Year 2nd Half Total"
+    "welfareExpenses": "Welfare Expenses ",
+    "workInProgressExpenses": "Work in Progress Expenses",
+    "firstHalfTotal": "First Half Total",
+    "secondHalfTotal": "Second Half Total"
 }
