--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -1,21 +1,22 @@
 {
     "action": "操作・アクション",
-    "add (+)": "追加",
+    "add": "追加",
     "button": "ボタン",
     "checkbox": "チェクボクス",
     "cancel": "キャンセル",
     "click": "クリック",
-    "client name": "クライアント名",
-    "confirm password": "パスワード確認",
+    "client": "顧客",
+    "clientName": "顧客名",
+    "confirmPassword": "パスワード確認",
     "download": "ダウンロード",
-    "email address": "メールアドレス",
-    "employee": "授業員",
+    "emailAddress": "メールアドレス",
+    "employee": "従業員",
     "enter": "入力",
-    "form title": "フォームタイトル",
-    "graph (bar)": "グラフ（バー）",
-    "graph title": "グラフの見出し",
-    "hamburger menu": "ハンバーガーメニュー",
-    "hamburger option": "ハンバーガーメニューの選択肢",
+    "formTitle": "フォームタイトル",
+    "graphBar": "グラフ（バー）",
+    "graphTitle": "グラフの見出し",
+    "hamburgerMenu": "ハンバーガーメニュー",
+    "hamburgerOption": "ハンバーガーメニューの選択肢",
     "image": "画像",
     "input": "入力",
     "item": "項目",
@@ -25,18 +26,26 @@
     "logo": "ロゴ",
     "month": "月",
     "navigation": "ナビ",
-    "new registration": "新規登録",
+    "newRegistration": "新規登録",
     "nextPage": "次へ　（次のページ）",
-    "No.": "番号",
+    "itemNumber": "番号",
     "paginator": "ページネータ",
     "password": "パスワード",
     "previousPage": "前へ （前のページ）",
     "project": "案件",
     "reenter": "再入力",
-    "remove (-)": "削除",
+    "remove": "削除",
     "submit": "登録",
-    "toggle amount of records displayed": "レコードの表示量を切り替える",
-    "total page": "全ページ",
+    "toggleAmountOfRecordsDisplayed": "レコードの表示量を切り替える",
+    "totalPage": "全ページ",
     "unknown": "不明",
-    "username": "ユーザー名"
+    "username": "ユーザー名",
+    "thousandYen": "千円",
+    "switchDisplayMode": "表示モード切り替え",
+    "switchEditMode": "編集モード切替",
+    "update": "更新する",
+    "projectName": "案件名",
+    "newProjectRegistration": "案件新規登録",
+    "newPersonnelRegistration": "人件費新規登録",
+    "selectEmployee": "従業員の選択"
 }
