--- a/client/src/translations/financial_words_jp.json
+++ b/client/src/translations/financial_words_jp.json
@@ -1,52 +1,58 @@
 {
-    "account categories": "勘定科目",
-    "advertising expenses": "広告宣伝費",
+    "accountCategories": "勘定科目",
+    "advertisingExpenses": "広告宣伝費",
     "analysis": "分析",
-    "amortization": "償却計上",
-    "assignment ratio": "割合",
-    "benefits allowance": "法定福利費",
+    "amortizationExpenses": "償却計上",
+    "assignmentRatio": "割合",
+    "statutoryWelfareExpenses": "法定福利費",
     "bonus": "賞与",
-    "communication costs": "通信費",
-    "consumable expenses": "消耗品費",
-    "cost of sales": "売上原価",
-    "cumulative ordinary income": "累計経常利益",
-    "department in charge": "受注事業部",
-    "depreciation expenses": "減価償却費",
-    "dispatch labour expenses": "派遣人件費",
-    "display by project": "案件別表示",
-    "entertainment expenses": "接待交際費",
-    "expenses": "経費",
-    "fuel allowance": "燃料手当",
-    "gross profit": "売上総利益",
-    "insurance premium": "保険料",
-    "non-operating expenses": "営業外費用",
-    "non-operating income": "営業外収益",
-    "operating income": "営業利益",
-    "operating profit margin": "営業利益率",
-    "outsourcing expenses": "外注加工費",
-    "professional services fees": "支払報酬",
-    "personal expenses": "人件費",
+    "communicationExpenses": "通信費",
+    "consumableExpenses": "消耗品費",
+    "costOfSales": "売上原価",
+    "ordinaryIncomeProfitMargin": "経常利益率",
+    "ordinaryIncome": "経常利益",
+    "cumulativeOrdinaryIncome": "累計経常利益 ",
+    "businessDivision": "受注事業部 ",
+    "depreciationExpenses": "減価償却費",
+    "dispatchLabourExpenses": "派遣人件費",
+    "displayByProject": "案件別表示",
+    "entertainmentExpenses": "接待交際費",
+    "expenses": "経費 ",
+    "fuelAllowance": "燃料手当",
+    "grossProfitMargin": "売上総利益率",
+    "grossProfit": "売上総利益 ",
+    "insurancePremiums": "保険料",
+    "nonOperatingExpenses": "営業外費用",
+    "nonOperatingIncome": "営業外収益 ",
+    "operatingIncome": "営業利益",
+    "operatingProfitMargin": "営業利益率",
+    "outsourcingExpenses": "外注加工費",
+    "professionalServicesFees": "支払報酬",
+    "personalExpenses": "人件費",
     "planning": "計画",
-    "product purchases": "商品仕入",
-    "profit and loss planning": "PL 計画",
+    "productPurchases": "商品仕入",
+    "profitAndLossPlaninng": "PL 計画",
     "purchases": "仕入高",
-    "rent": "賃借料",
-    "executive renumeration": "役員報酬",
+    "rentExpenses": "賃借料",
+    "executiveRenumeration": "役員報酬",
     "results": "実績",
-    "salary": "給与手当",
+    "salary": "給与",
     "sales": "売上",
-    "sales ratio": "売上比",
-    "SGA": "販売及び一般管理費",
-    "taxes & public charges": "租税公課",
-    "toggle 0 yen expenses": "0円行动作表示",
+    "salesRatio": "売上比",
+    "sellingAndGeneralAdminExpenses": "販売及び一般管理費",
+    "taxesAndpublicCharges": "租税公課",
+    "toggle0YenExpenses": "0円行动作表示",
     "total": "トータル",
-    "total amount": "合計",
-    "total sales": "売上高",
-    "transaction fees": "支払手数料",
-    "travel expenses": "旅費交通費",
-    "utilities expenses": "水道光熱費",
-    "welfare expenses": "福利厚生費",
-    "WIP": "仕掛計上",
-    "year 1st half total": "上期計",
-    "year 2nd half total": "下期計"
+    "totalAmount": "合計",
+    "totalSalesRevenue": "総売上高",
+    "salesRevenue": "売上高",
+    "transactionFees": "支払手数料",
+    "suppliesExpenses": "消耗品費",
+    "travelExpenses": "旅費交通費 ",
+    "utilitiesExpenses": "水道光熱費",
+    "welfareExpenses": "福利厚生費 ",
+    "workInProgressExpenses": "仕掛計上",
+    "firstHalfTotal": "上期計",
+    "secondHalfTotal": "下期計"
 }
+
