Done fixing broken UI by translation

--- a/client/src/translations/financial_words_en.json
+++ b/client/src/translations/financial_words_en.json
@@ -3,7 +3,7 @@
     "advertisingExpenses": "Advertising Expenses",
     "analysis": "Analysis",
     "amortizationExpenses": "Amortization Expenses",
-    "assignmentRatio": "Assignemnt Ratio",
+    "assignmentRatio": "Assignment Ratio",
     "statutoryWelfareExpenses": "Statutory Welfare Expenses",
     "bonus": "Bonus",
     "communicationExpenses": "Communication Expenses",
