--- a/client/src/translations/screenNames_words_en.json
+++ b/client/src/translations/screenNames_words_en.json
@@ -6,8 +6,8 @@
     "results": "Results",
     "projectsRegistration": "Projects Registration",
     "projectsList": "Projects List",
-    "personnelExpensesRegistration": "Personnel Expenses Registration",
-    "personnelExpensesList": "Personnel Expenses List",
+    "employeeExpensesRegistration": "Employee Expenses Registration",
+    "employeeExpensesList": "Employee Expenses List",
     "expensesRegistration": "Expenses Registration",
     "expensesList": "Expenses List",
     "costOfsalesRegistration": "Cost of Sales Registration",
