--- a/client/src/translations/screenNames_words_jp.json
+++ b/client/src/translations/screenNames_words_jp.json
@@ -6,8 +6,8 @@
     "results": "実績",
     "projectsRegistration": "案件登録",
     "projectsList": "案件一覧",
-    "personnelExpensesRegistration": "人件費一覧",
-    "personnelExpensesList": "人件費登録",
+    "employeeExpensesRegistration": "人件費一覧",
+    "employeeExpensesList": "人件費登録",
     "expensesRegistration": "経費 一覧",
     "expensesList": "経費 登録",
     "costOfsalesRegistration": "売上原価 登録",
