Refactor: change personnelExpenses to employeeExpenses

--- a/client/src/translations/financial_words_en.json
+++ b/client/src/translations/financial_words_en.json
@@ -28,7 +28,7 @@
     "operatingProfitMargin": "Operating Profit Margin",
     "outsourcingExpenses": "Outsourcing Expenses",
     "professionalServicesFees": "Professional Services Fees",
-    "personnelExpenses": "Personnel Expenses",
+    "employeeExpenses": "Employee Expenses",
     "planning": "Planning",
     "productPurchases": "Product Purchases",
     "profitAndLossPlaninng": "Profit and Loss Planning",
