--- a/client/src/translations/financial_words_jp.json
+++ b/client/src/translations/financial_words_jp.json
@@ -28,7 +28,7 @@
     "operatingProfitMargin": "営業利益率",
     "outsourcingExpenses": "外注加工費",
     "professionalServicesFees": "支払報酬",
-    "personnelExpenses": "人件費",
+    "employeeExpenses": "人件費",
     "planning": "計画",
     "productPurchases": "商品仕入",
     "profitAndLossPlaninng": "PL 計画",
