--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -46,8 +46,8 @@
     "newProjectRegistration": "案件新規登録",
     "newEmployeeExpensesRegistration": "人件費新規登録",
     "selectEmployee": "従業員の選択",
-    "switchtoEditMode": "表示モード切り替え",
-    "switchtoDisplayMode": "変種モード切り替え",
-    "cannotSwitchLanguagesinEditMode": "編集モードで言語を切り替えられない",
+    "switchToEditMode": "編集モード切り替え",
+    "switchToDisplayMode": "表示モード切り替え",
+    "cannotSwitchLanguagesInEditMode": "編集モードで言語を切り替えられない",
     "alertMessageAbove": "選択された月は既にデータが登録されています。上書きしますか？"
 }
