--- a/client/src/translations/screenNames_words_en.json
+++ b/client/src/translations/screenNames_words_en.json
@@ -10,8 +10,8 @@
     "employeeExpensesList": "Employee Expenses List",
     "expensesRegistration": "Expenses Registration",
     "expensesList": "Expenses List",
-    "costOfsalesRegistration": "Cost of Sales Registration",
-    "costOfsalesList": "Cost of Sales List",
+    "costOfSalesRegistration": "Cost of Sales Registration",
+    "costOfSalesList": "Cost of Sales List",
     "clientsRegistration": "Clients Registration",
     "clientsList": "Clients List",
     "employeesRegistration": "Employees Registration",
