--- a/client/src/translations/screenNames_words_jp.json
+++ b/client/src/translations/screenNames_words_jp.json
@@ -10,8 +10,8 @@
     "employeeExpensesList": "人件費登録",
     "expensesRegistration": "経費 一覧",
     "expensesList": "経費 登録",
-    "costOfsalesRegistration": "売上原価 登録",
-    "costOfsalesList": "売上原価 一覧",
+    "costOfSalesRegistration": "売上原価 登録",
+    "costOfSalesList": "売上原価 一覧",
     "clientsRegistration": "顧客登録",
     "clientsList": "顧客一覧",
     "employeesRegistration": "従業員登録",
