refactor: changing all classNames in both tsx and scss files

--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -41,10 +41,9 @@
     "unknown": "Unknown",
     "username": "Username",
     "thousandYen": "Thousand Yen",
+    "yen": "Yen",
     "update": "Update",
     "projectName": "Project Name",
-    "newProjectRegistration": "New Project Registration",
-    "newEmployeeExpensesRegistration": "New Employee Expenses Registration",
     "selectEmployee": "Select Employee",
     "switchToEditMode": "Switch to Edit Mode",
     "switchToDisplayMode": "Switch to Display Mode",
