--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -41,10 +41,9 @@
     "unknown": "不明",
     "username": "ユーザー名",
     "thousandYen": "千円",
+    "yen": "円",
     "update": "更新する",
     "projectName": "案件名",
-    "newProjectRegistration": "案件新規登録",
-    "newEmployeeExpensesRegistration": "人件費新規登録",
     "selectEmployee": "従業員の選択",
     "switchToEditMode": "編集モード切り替え",
     "switchToDisplayMode": "表示モード切り替え",
