--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -49,9 +49,9 @@
     "switchToDisplayMode": "表示モード切り替え",
     "cannotSwitchLanguagesInEditMode": "編集モードで言語を切り替えられない",
     "alertMessageAbove": "選択された月は既にデータが登録されています。上書きしますか？",
-    "authUserID": "記載者",
-    "created_at": "登録日",
-    "updated_at": "更新日",
+    "createdBy": "記載者",
+    "createdAt": "登録日",
+    "updatedAt": "更新日",
     "deleteMessage": "この顧客を削除してもよろしいですか？",
     "delete": "削除",
     "confirm": "確認"
