--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -39,7 +39,7 @@
     "toggleAmountOfRecordsDisplayed": "レコードの表示量を切り替える",
     "totalPage": "全ページ",
     "unknown": "不明",
-    "username": "ユーザー名",
+    "username": "ユーザーID",
     "thousandYen": "千円",
     "yen": "円",
     "update": "更新する",
@@ -54,5 +54,12 @@
     "updatedAt": "更新日",
     "deleteMessage": "この顧客を削除してもよろしいですか？",
     "delete": "削除",
-    "confirm": "確認"
+    "confirm": "確認",
+    "eg": "例",
+    "usersValidationText1": "姓と名を英字で入力し、間にアンダーバーを入れてください",
+    "usersValidationText2": "姓と名（日本名の場合は漢字）を入力してください",
+    "usersValidationText3": "パスワードは8文字以上で、大文字、小文字、数字、特殊文字をそれぞれ1つ以上含めてください",
+    "usersValidationText4": "有効なメールアドレスを入力してください ",
+    "confirmEmailAddress": "メールアドレス確認",
+    "dateJoined": "入社日"
 }
