Revert "feat: created business divisions screens (STATIC DATA)"

--- a/client/src/translations/financial_words_jp.json
+++ b/client/src/translations/financial_words_jp.json
@@ -28,7 +28,7 @@
     "operatingProfitMargin": "営業利益率",
     "outsourcingExpenses": "外注加工費",
     "professionalServicesFees": "支払報酬",
-    "employeeExpenses": "人件費",
+    "personalExpenses": "人件費",
     "planning": "計画",
     "productPurchases": "商品仕入",
     "profitAndLossPlaninng": "PL 計画",
@@ -47,6 +47,7 @@
     "totalSalesRevenue": "総売上高",
     "salesRevenue": "売上高",
     "transactionFees": "支払手数料",
+    "suppliesExpenses": "消耗品費",
     "travelExpenses": "旅費交通費 ",
     "utilitiesExpenses": "水道光熱費",
     "welfareExpenses": "福利厚生費 ",
