--- a/client/src/translations/screenNames_words_en.json
+++ b/client/src/translations/screenNames_words_en.json
@@ -6,20 +6,15 @@
     "results": "Results",
     "projectsRegistration": "Projects Registration",
     "projectsList": "Projects List",
-    "employeeExpensesRegistration": "Employee Expenses Registration",
-    "employeeExpensesList": "Employee Expenses List",
+    "personnelExpensesRegistration": "Personnel Expenses Registration",
+    "personnelExpensesList": "Personnel Expenses List",
     "expensesRegistration": "Expenses Registration",
     "expensesList": "Expenses List",
-    "costOfSalesRegistration": "Cost of Sales Registration",
-    "costOfSalesList": "Cost of Sales List",
+    "costOfsalesRegistration": "Cost of Sales Registration",
+    "costOfsalesList": "Cost of Sales List",
     "clientsRegistration": "Clients Registration",
     "clientsList": "Clients List",
     "employeesRegistration": "Employees Registration",
     "employeesList": "Employees List",
-    "businessDivisionsRegistration": "Business Divisions Registration",
-    "businessDivisionsList": "Business Divisions List",
-    "usersRegistration": "Users Registration",
-    "usersList": "Users List",
-    "dashboard": "Dashboard",
-    "masterMaintenance": "Master Maintenance"
+    "dashboard": "Dashboard"
 }
