--- a/client/src/translations/financial_words_en.json
+++ b/client/src/translations/financial_words_en.json
@@ -21,14 +21,14 @@
     "fuelAllowance": "Fuel Allowance",
     "grossProfitMargin": "Gross Profit Margin",
     "grossProfit": "Gross Profit ",
-    "insurancePremiums": "Insurance Premiums",
+    "insurancePremiums": "Insurance Permiums",
     "nonOperatingExpenses": "Non-Operating Expenses",
     "nonOperatingIncome": "Non-Operating Income ",
     "operatingIncome": "Operating Income",
     "operatingProfitMargin": "Operating Profit Margin",
     "outsourcingExpenses": "Outsourcing Expenses",
     "professionalServicesFees": "Professional Services Fees",
-    "employeeExpenses": "Employee Expenses",
+    "personalExpenses": "Personal Expenses",
     "planning": "Planning",
     "productPurchases": "Product Purchases",
     "profitAndLossPlaninng": "Profit and Loss Planning",
@@ -47,6 +47,7 @@
     "totalSalesRevenue": "Total Sales Revenue",
     "salesRevenue": "Sales Revenue",
     "transactionFees": "Transaction Fees",
+    "suppliesExpenses": "Supplies Expenses",
     "travelExpenses": "Travel Expenses ",
     "utilitiesExpenses": "Utilities Expenses",
     "welfareExpenses": "Welfare Expenses ",
