--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -21,17 +21,17 @@
     "input": "入力",
     "item": "項目",
     "label": "ラベル",
-    "lastPage": "最後",
+    "lastPage": "最終ページ",
     "login": "ログイン",
     "logo": "ロゴ",
     "month": "月",
     "navigation": "ナビ",
     "newRegistration": "新規登録",
-    "nextPage": "次へ",
+    "nextPage": "次へ　（次のページ）",
     "itemNumber": "番号",
     "paginator": "ページネータ",
     "password": "パスワード",
-    "previousPage": "前へ",
+    "previousPage": "前へ （前のページ）",
     "project": "案件",
     "reenter": "再入力",
     "remove": "削除",
@@ -41,18 +41,11 @@
     "unknown": "不明",
     "username": "ユーザー名",
     "thousandYen": "千円",
-    "yen": "円",
+    "switchDisplayMode": "表示モード切り替え",
+    "switchEditMode": "編集モード切替",
     "update": "更新する",
     "projectName": "案件名",
-    "selectEmployee": "従業員の選択",
-    "switchToEditMode": "編集モード切り替え",
-    "switchToDisplayMode": "表示モード切り替え",
-    "cannotSwitchLanguagesInEditMode": "編集モードで言語を切り替えられない",
-    "alertMessageAbove": "選択された月は既にデータが登録されています。上書きしますか？",
-    "createdBy": "記載者",
-    "createdAt": "登録日",
-    "updatedAt": "更新日",
-    "deleteMessage": "この顧客を削除してもよろしいですか？",
-    "delete": "削除",
-    "confirm": "確認"
+    "newProjectRegistration": "案件新規登録",
+    "newPersonnelRegistration": "人件費新規登録",
+    "selectEmployee": "従業員の選択"
 }
