--- a/client/src/translations/screenNames_words_jp.json
+++ b/client/src/translations/screenNames_words_jp.json
@@ -6,21 +6,16 @@
     "results": "実績",
     "projectsRegistration": "案件登録",
     "projectsList": "案件一覧",
-    "employeeExpensesRegistration": "人件費一覧",
-    "employeeExpensesList": "人件費登録",
+    "personnelExpensesRegistration": "人件費一覧",
+    "personnelExpensesList": "人件費登録",
     "expensesRegistration": "経費 一覧",
     "expensesList": "経費 登録",
-    "costOfSalesRegistration": "売上原価 登録",
-    "costOfSalesList": "売上原価 一覧",
+    "costOfsalesRegistration": "売上原価 登録",
+    "costOfsalesList": "売上原価 一覧",
     "clientsRegistration": "顧客登録",
     "clientsList": "顧客一覧",
     "employeesRegistration": "従業員登録",
     "employeesList": "従業員一覧",
-    "businessDivisionsRegistration": "受注事業部登録",
-    "businessDivisionsList": "受注事業部一覧",
-    "usersRegistration": "ユーザー登録",
-    "usersList": "ユーザー一覧",
-    "dashboard": "ダッシュボード",
-    "masterMaintenance": "マスタメンテナンス"
+    "dashboard": "ダッシュボード"
 }
   
