--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -60,7 +60,7 @@
     "email": "Email",
     "companyName": "Company Name",
     "company": "Company",
-    "companyID": "Company ID"
+    "companyID": "Company ID",
     "eg": "Eg.",
     "usersValidationText1": "Please enter your last name and first name using the English alphabet, with an underscore between them.",
     "usersValidationText2": "Please enter your last and first name (kanji if Japanese name).",
