--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -60,7 +60,7 @@
     "email": "メールアドレス",
     "companyName": "会社名",
     "company": "会社",
-    "companyID": "会社ID"
+    "companyID": "会社ID",
     "eg": "例",
     "usersValidationText1": "姓と名を英字で入力し、間にアンダーバーを入れてください",
     "usersValidationText2": "姓と名（日本名の場合は漢字）を入力してください",
