refactor: change temp filenames to correct and added navigation functions to buttons

--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -67,5 +67,6 @@
     "usersValidationText3": "Passwords must be at least 8 characters long and contain at least one uppercase letter, one lowercase letter, one number and one special character.",
     "usersValidationText4": "Please enter a valid email address. ",
     "confirmEmailAddress": "Confirm Email Address",
-    "dateJoined": "Date Joined"
+    "dateJoined": "Date Joined",
+    "users": "User"
 }
