--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -68,5 +68,5 @@
     "usersValidationText4": "有効なメールアドレスを入力してください ",
     "confirmEmailAddress": "メールアドレス確認",
     "dateJoined": "入社日",
-    "users": "ユーアー"
+    "users": "ユーザー"
 }
