--- a/client/src/translations/financial_words_en.json
+++ b/client/src/translations/financial_words_en.json
@@ -12,7 +12,7 @@
     "ordinaryIncomeProfitMargin": "Ordinary Income Profit Margin",
     "ordinaryIncome": "Ordinary Income",
     "cumulativeOrdinaryIncome": "Cumulative Ordinary Income ",
-    "businessDivision": "Business Division ",
+    "businessDivision": "Business Divisions ",
     "depreciationExpenses": "Depreciation Expenses",
     "dispatchLabourExpenses": "Dispatch Labour Expenses",
     "displayByProject": "Display by Project",
