refactor: change labour to labor and change some classNames in cost of sales registration

--- a/client/src/translations/financial_words_en.json
+++ b/client/src/translations/financial_words_en.json
@@ -14,7 +14,7 @@
     "cumulativeOrdinaryIncome": "Cumulative Ordinary Income ",
     "businessDivision": "Business Divisions ",
     "depreciationExpenses": "Depreciation Expenses",
-    "dispatchLabourExpenses": "Dispatch Labour Expenses",
+    "dispatchLaborExpenses": "Dispatch Labor Expenses",
     "displayByProject": "Display by Project",
     "entertainmentExpenses": "Entertainment Expenses",
     "expenses": "Expenses ",
