--- a/client/src/translations/financial_words_jp.json
+++ b/client/src/translations/financial_words_jp.json
@@ -14,7 +14,7 @@
     "cumulativeOrdinaryIncome": "累計経常利益 ",
     "businessDivision": "受注事業部 ",
     "depreciationExpenses": "減価償却費",
-    "dispatchLabourExpenses": "派遣人件費",
+    "dispatchLaborExpenses": "派遣人件費",
     "displayByProject": "案件別表示",
     "entertainmentExpenses": "接待交際費",
     "expenses": "経費 ",
