--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -66,6 +66,10 @@
     "usersValidationText2": "Please enter your last and first name (kanji if Japanese name).",
     "usersValidationText3": "Passwords must be at least 8 characters long and contain at least one uppercase letter, one lowercase letter, one number and one special character.",
     "usersValidationText4": "Please enter a valid email address. ",
+    "usersValidationText5": "Passwords do not match.",
+    "usersValidationText6": "All fields are required.",
+    "usersValidationText7": "There was an error with user registration.",
+    "usersValidationText8": "Emails do not match..",
     "confirmEmailAddress": "Confirm Email Address",
     "dateJoined": "Date Joined",
     "users": "Users"
