--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -66,6 +66,10 @@
     "usersValidationText2": "姓と名（日本名の場合は漢字）を入力してください",
     "usersValidationText3": "パスワードは8文字以上で、大文字、小文字、数字、特殊文字をそれぞれ1つ以上含めてください",
     "usersValidationText4": "有効なメールアドレスを入力してください ",
+    "usersValidationText5": "パスワードが一致しません",
+    "usersValidationText6": "すべての項目は必須です",
+    "usersValidationText7": "ユーザー登録にエラーが発生しました。",
+    "usersValidationText8": "メールアドレスが一致しません",
     "confirmEmailAddress": "メールアドレス確認",
     "dateJoined": "入社日",
     "users": "ユーザー"
