--- a/client/src/translations/screenNames_words_jp.json
+++ b/client/src/translations/screenNames_words_jp.json
@@ -6,10 +6,10 @@
     "results": "実績",
     "projectsRegistration": "案件登録",
     "projectsList": "案件一覧",
-    "employeeExpensesRegistration": "人件費一覧",
-    "employeeExpensesList": "人件費登録",
-    "expensesRegistration": "経費 一覧",
-    "expensesList": "経費 登録",
+    "employeeExpensesRegistration": "人件費登録",
+    "employeeExpensesList": "人件費一覧",
+    "expensesRegistration": "経費 登録",
+    "expensesList": "経費 一覧",
     "costOfSalesRegistration": "売上原価 登録",
     "costOfSalesList": "売上原価 一覧",
     "clientsRegistration": "顧客登録",
@@ -23,4 +23,3 @@
     "dashboard": "ダッシュボード",
     "masterMaintenance": "マスタメンテナンス"
 }
-  
