fixed capitalization and translations

--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -52,14 +52,14 @@
     "createdBy": "Created By",
     "createdAt": "Created At",
     "updatedAt": "Updated At",
-    "deleteMessage": "Are you sure you would like to delete this client?",
-    "deleteMessage2": "Are you sure you would like to delete this employee?",
+    "deleteClientMessage": "Are you sure you would like to delete this client?",
+    "deleteEmployeeMessage": "Are you sure you would like to delete this employee?",
     "delete": "Delete",
     "confirm": "Confirm",
     "firstName": "First Name",
     "lastName": "Last Name",
     "email": "Email",
-    "email2": "This email already exist.",
+    "emailExistsMessage": "This email already exist.",
     "companyName": "Company Name",
     "company": "Company",
     "companyID": "Company ID",
