--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -52,14 +52,14 @@
     "createdBy": "記載者",
     "createdAt": "登録日",
     "updatedAt": "更新日",
-    "deleteMessage": "この顧客を削除してもよろしいですか？",
-    "deleteMessage2": "この従業員を削除してもよろしいですか？",
+    "deleteClientMessage": "この顧客を削除してもよろしいですか？",
+    "deleteEmployeeMessage": "この従業員を削除してもよろしいですか？",
     "delete": "削除",
     "confirm": "確認",
     "firstName": "名",
     "lastName": "姓",
     "email": "メールアドレス",
-    "email2": "このメールはすでに存在している。",
+    "emailExistsMessage": "このメールはすでに存在している。",
     "companyName": "会社名",
     "company": "会社",
     "companyID": "会社ID",
