added duplicate validations and translation

--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -74,5 +74,6 @@
     "usersValidationText8": "Emails do not match..",
     "confirmEmailAddress": "Confirm Email Address",
     "dateJoined": "Date Joined",
-    "users": "Users"
+    "users": "Users",
+    "clientExistMessage": "This client name already exists."
 }
