refactor: cost-of-sales screens frontend

--- a/client/src/translations/general_words_jp.json
+++ b/client/src/translations/general_words_jp.json
@@ -76,5 +76,9 @@
     "dateJoined": "入社日",
     "users": "ユーザー",
     "clientExistMessage": "このクライアント名はすでに存在します。",
-    "clientDeleteMessage": "このクライアントを削除してもよろしいですか？"
+    "clientDeleteMessage": "このクライアントを削除してもよろしいですか？",
+    "year": "年",
+    "cancelMessage": "キャンセルするのはよろしいでしょうか?",
+    "reject": "いいえ",
+    "accept": "はい"
 }
