--- a/client/src/translations/general_words_en.json
+++ b/client/src/translations/general_words_en.json
@@ -76,5 +76,9 @@
     "dateJoined": "Date Joined",
     "users": "Users",
     "clientExistMessage": "This client name already exists.",
-    "clientDeleteMessage": "Are you sure you want to delete this client?"
+    "clientDeleteMessage": "Are you sure you want to delete this client?",
+    "year": "Year",
+    "cancelMessage": "Are you sure you want to cancel?",
+    "reject": "No",
+    "accept": "Yes"
 }
