register, list, edit screens work. overwrite and created_at and updated_at need to be fixed

--- a/client/src/translations/financial_words_en.json
+++ b/client/src/translations/financial_words_en.json
@@ -40,7 +40,7 @@
     "sales": "Sales",
     "salesRatio": "Sales Ratio",
     "sellingAndGeneralAdminExpenses": "Selling and General Admin Expenses",
-    "taxesAndpublicCharges": "Taxes and Public Charges",
+    "taxesAndPublicCharges": "Taxes and Public Charges",
     "toggle0YenExpenses": "Toggle 0 Yen Expenses",
     "total": "Total",
     "totalAmount": "Total Amount",
