--- a/client/src/translations/financial_words_jp.json
+++ b/client/src/translations/financial_words_jp.json
@@ -40,7 +40,7 @@
     "sales": "売上",
     "salesRatio": "売上比",
     "sellingAndGeneralAdminExpenses": "販売及び一般管理費",
-    "taxesAndpublicCharges": "租税公課",
+    "taxesAndPublicCharges": "租税公課",
     "toggle0YenExpenses": "0円行动作表示",
     "total": "トータル",
     "totalAmount": "合計",
