Fixed validation and added 'singular' english words for Registration

--- a/client/src/translations/financial_words_en.json
+++ b/client/src/translations/financial_words_en.json
@@ -1,56 +1,86 @@
 {
-    "accountCategories": "Account Categories",
-    "advertisingExpenses": "Advertising Expenses",
-    "analysis": "Analysis",
-    "amortizationExpenses": "Amortization Expenses",
-    "assignmentRatio": "Assignment Ratio",
-    "statutoryWelfareExpenses": "Statutory Welfare Expenses",
-    "bonus": "Bonus",
-    "communicationExpenses": "Communication Expenses",
-    "consumableExpenses": "Consumable Expenses",
-    "costOfSales": "Cost of Sales",
-    "ordinaryIncomeProfitMargin": "Ordinary Income Profit Margin",
-    "ordinaryIncome": "Ordinary Income",
-    "cumulativeOrdinaryIncome": "Cumulative Ordinary Income ",
-    "businessDivision": "Business Divisions ",
-    "depreciationExpenses": "Depreciation Expenses",
-    "dispatchLaborExpenses": "Dispatch Labor Expenses",
-    "displayByProject": "Display by Project",
-    "entertainmentExpenses": "Entertainment Expenses",
-    "expenses": "Expenses ",
-    "fuelAllowance": "Fuel Allowance",
-    "grossProfitMargin": "Gross Profit Margin",
-    "grossProfit": "Gross Profit ",
-    "insurancePremiums": "Insurance Premiums",
-    "nonOperatingExpenses": "Non-Operating Expenses",
-    "nonOperatingIncome": "Non-Operating Income ",
-    "operatingIncome": "Operating Income",
-    "operatingProfitMargin": "Operating Profit Margin",
-    "outsourcingExpenses": "Outsourcing Expenses",
-    "professionalServicesFees": "Professional Services Fees",
-    "employeeExpenses": "Employee Expenses",
-    "planning": "Planning",
-    "productPurchases": "Product Purchases",
-    "profitAndLossPlaninng": "Profit and Loss Planning",
-    "purchases": "Purchases",
-    "rentExpenses": "Rent Expenses",
-    "executiveRenumeration": "Executive Renumeration",
-    "results": "Results",
-    "salary": "Salary",
-    "sales": "Sales",
-    "salesRatio": "Sales Ratio",
-    "sellingAndGeneralAdminExpenses": "Selling and General Admin Expenses",
-    "taxesAndPublicCharges": "Taxes and Public Charges",
-    "toggle0YenExpenses": "Toggle 0 Yen Expenses",
-    "total": "Total",
-    "totalAmount": "Total Amount",
-    "totalSalesRevenue": "Total Sales Revenue",
-    "salesRevenue": "Sales Revenue",
-    "transactionFees": "Transaction Fees",
-    "travelExpenses": "Travel Expenses ",
-    "utilitiesExpenses": "Utilities Expenses",
-    "welfareExpenses": "Welfare Expenses ",
-    "workInProgressExpenses": "Work in Progress Expenses",
-    "firstHalfTotal": "First Half Total",
-    "secondHalfTotal": "Second Half Total"
+  "accountCategories": "Account Categories",
+  "advertisingExpenses": "Advertising Expenses",
+  "advertisingExpense": "Advertising Expense",
+
+  "analysis": "Analysis",
+  "amortizationExpenses": "Amortization Expenses",
+  "amortizationExpense": "Amortization Expense",
+  "assignmentRatio": "Assignment Ratio",
+  "statutoryWelfareExpenses": "Statutory Welfare Expenses",
+  "statutoryWelfareExpense": "Statutory Welfare Expense",
+  "bonus": "Bonus",
+  "bonuses": "Bonuses",
+  "communicationExpenses": "Communication Expenses",
+  "communicationExpense": "Communication Expense",
+  "consumableExpenses": "Consumable Expenses",
+  "consumableExpense": "Consumable Expense",
+  "costOfSales": "Cost of Sales",
+  "costOfSale": "Cost of Sale",
+  "ordinaryIncomeProfitMargin": "Ordinary Income Profit Margin",
+  "ordinaryIncome": "Ordinary Income",
+  "cumulativeOrdinaryIncome": "Cumulative Ordinary Income ",
+  "businessDivision": "Business Divisions ",
+  "depreciationExpenses": "Depreciation Expenses",
+  "depreciationExpense": "Depreciation Expense",
+  "dispatchLaborExpenses": "Dispatch Labor Expenses",
+  "dispatchLaborExpense": "Dispatch Labor Expense",
+  "displayByProject": "Display by Project",
+  "entertainmentExpenses": "Entertainment Expenses",
+  "entertainmentExpense": "Entertainment Expense",
+  "expenses": "Expenses ",
+  "expense": "Expense ",
+  "fuelAllowances": "Fuel Allowances",
+  "fuelAllowance": "Fuel Allowance",
+  "grossProfitMargin": "Gross Profit Margin",
+  "grossProfit": "Gross Profit ",
+  "insurancePremiums": "Insurance Premiums",
+  "insurancePremium": "Insurance Premium",
+  "nonOperatingExpenses": "Non-Operating Expenses",
+  "nonOperatingExpense": "Non-Operating Expense",
+  "nonOperatingIncome": "Non-Operating Income ",
+  "operatingIncome": "Operating Income",
+  "operatingProfitMargin": "Operating Profit Margin",
+  "outsourcingExpenses": "Outsourcing Expenses",
+  "outsourcingExpense": "Outsourcing Expense",
+  "professionalServicesFees": "Professional Services Fees",
+  "professionalServicesFee": "Professional Services Fee",
+  "employeeExpenses": "Employee Expenses",
+  "planning": "Planning",
+  "productPurchases": "Product Purchases",
+  "productPurchase": "Product Purchase",
+  "profitAndLossPlaninng": "Profit and Loss Planning",
+  "purchases": "Purchases",
+  "purchase": "Purchase",
+  "rentExpenses": "Rent Expenses",
+  "rentExpense": "Rent Expense",
+  "executiveRenumerations": "Executive Renumerations",
+  "executiveRenumeration": "Executive Renumeration",
+  "results": "Results",
+  "salaries": "Salaries",
+  "salary": "Salary",
+  "sales": "Sales",
+  "salesRatio": "Sales Ratio",
+  "sellingAndGeneralAdminExpenses": "Selling and General Admin Expenses",
+  "sellingAndGeneralAdminExpense": "Selling and General Admin Expense",
+  "taxesAndPublicCharges": "Taxes and Public Charges",
+  "taxAndPublicCharge": "Tax and Public Charge",
+  "toggle0YenExpenses": "Toggle 0 Yen Expenses",
+  "total": "Total",
+  "totalAmount": "Total Amount",
+  "totalSalesRevenue": "Total Sales Revenue",
+  "salesRevenue": "Sales Revenue",
+  "transactionFees": "Transaction Fees",
+  "transactionFee": "Transaction Fee",
+  "travelExpenses": "Travel Expenses ",
+  "travelExpense": "Travel Expense ",
+  "utilitiesExpenses": "Utilities Expenses",
+  "utilitiesExpense": "Utilities Expense",
+  "welfareExpenses": "Welfare Expenses ",
+  "welfareExpense": "Welfare Expense ",
+  "workInProgressExpenses": "Work in Progress Expenses",
+  "workInProgressExpense": "Work in Progress Expense",
+
+  "firstHalfTotal": "First Half Total",
+  "secondHalfTotal": "Second Half Total"
 }
